# inverse-kinematics

./: .gitmodules  CMakeLists.txt  README.md
include/glad/: glad.h
src/: glad.c  main.c
